src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-dhF500-b-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\ndefault window height: F500\nborder on\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 500, bounds: 1231 × 680, states: []

post-map configures:
size: 0 × 500, bounds: 1231 × 680, states: []
size: 1 × 500, bounds: 1231 × 680, states: [Activated]
